# ag-claw

./: .editorconfig  .env.example  .eslintignore  .eslintrc.js  .gitignore  .npmrc  .prettierignore  .prettierrc  .semgrep.sarif  .tsbuildinfo  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MEMORY.md  PRODUCTION_STATUS.md  README.md  SECURITY.md  TASKS.md  error-check.md  eslint.config.js  eslint.config.mjs  install.sh  jest.config.js  package-lock.json  package.json  security-analysis.md  security-audit-features.md  security-audit.md  skills-audit.md  tsconfig.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
config/: default.yaml  router.example.json  security-policy.yaml  test.yaml
docker/: Dockerfile  docker-compose.yml
docs/: API.md  DEVELOPER_GUIDE.md  FEATURES.md  MIGRATION_FROM_OPENCLAW.md  PRESENTATION.md  QUICK_START.md  QUICK_START_RU.md  RELEASE_PACKAGING.md  ROUTER-AGENT.md  USER_GUIDE.md  USER_GUIDE_RU.md  architecture.md  dashboard.html  developer-guide.md  features.md  installation.md  node-map.html  ui-plan.md
mobile/: README.md
scripts/: build-desktop-sidecar.js  build-windows-release.ps1  patch-windows-exe.js  postinstall-patch.js  sync-version.js  typecheck-all.sh
src/: cli.ts  index.js  index.ts
src/desktop/: Cargo.toml  tauri.conf.json
src/desktop/capabilities/: default.json
src/desktop/src/: lib.rs  main.rs
tests/: api-gateway-security.test.ts  builtin-tool-security.test.ts  capability-broker.test.ts  cli-branding.test.ts  cli-launch.test.ts  cli-packaged-wizard.test.ts  webchat.test.js  (+14 more)
(+267 files in other folders)
