[package]
name = "argentum-desktop"
version = "0.0.3"
description = "Argentum desktop shell"
authors = ["AG064"]
edition = "2021"

[lib]
name = "argentum_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
